# knowledgelink

./: .gitignore  Dockerfile  README.md  app.py  package-lock.json  package.json
backend/: Dockerfile  kl_app.py  pyproject.toml
frontend/: .gitignore  Dockerfile  README.md  middleware.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js  provider.jsx
frontend/app/_components/: ChatInputBox.jsx  Header.jsx
frontend/app/lib/: page.jsx
frontend/components/ui/: CardSpotlight.jsx  ExpandableCard.jsx  ExpandableCardList.jsx  FloatingDock.jsx  MovingBorderContainer.jsx  MultiStepLoader.jsx  dropdown-menu.jsx  separator.jsx  sheet.jsx  sidebar.jsx  skeleton.jsx  tooltip.jsx
frontend/hooks/: useOutsideClick.js
frontend/lib/: config.js
