[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["maskeen  <120341809+mxskeen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.11"
python-dotenv = "^1.1.1"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
bs4 = "^0.0.2"
requests = "^2.32.4"
trafilatura = "^2.0.0"
# New deps for KnowledgeLink
motor = "^3.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
authlib = "^1.3.2"
google-generativeai = "^0.8.3"
httpx = "^0.27.0"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
